Check box and layer-large park added
Styling are added

--- a/Project_Style.css
+++ b/Project_Style.css
@@ -53,3 +53,15 @@
     width: 10px;
     margin-right: 5px; /*Styling the positon of the circle*/
 }
+/*styling .map-overlay-data data*/
+.map-overlay-data {
+    position: relative;
+    font: 14px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    background: rgba(255, 255, 255, 0.8);
+    width: 260px;
+    top: 100px;
+    left: 10px;
+    margin-top: 10px;
+    padding: 10px;
+    overflow: visible;
+}
