--- a/Project_Style.css
+++ b/Project_Style.css
@@ -31,7 +31,7 @@
 
 /* Styling the legend and its necessary components */
 .legend {
-    position: absolute; 
+    position: relative; 
     background-color: #fff;
     border-radius: 3px;
     bottom: 0;
