--- a/Project_Style.css
+++ b/Project_Style.css
@@ -232,3 +232,11 @@ h3 {
     justify-content: center;
     align-items: center;
   }
+  .heading {
+    background-color: rgb(255, 247, 206);
+    color: rgb(79, 10, 143);
+    width: 100%;
+    margin-right: 0;
+    margin-left: 0;
+    text-align: center;
+}
